2005-10-12  Ulrich Drepper  <drepper@redhat.com>

	Correctly implement M_MXFAST.
	* malloc/malloc.c (struct malloc_state): Replace max_fast with flags
	fields.
	(global_max_fast): New variable.
	(set_max_fast): Change to not require arena parameter and to modify
	global_max_fast.  Change all callers.
	(get_max_fast): New macro.  Use this instead of directly accessing
	now removed max_fast arena member.
	(have_fastchunks): Use flags instead of max_fast.
	(clear_fastchunks): Likewise.
	(set_fastchunks): Likewise.
	(contiguous): Likewise.
	(noncontiguous): Likewise.
	(set_noncontiguous): Likewise.
	(set_contiguous): Likewise.
	(malloc_init_state): Explicitly set FASTCHUNKS_BIT.  Call set_max_fast
	only for main arena.
	* malloc/hooks.c (public_sET_STATe): Adjust set_max_fast use.

2005-10-10  Daniel Jacobowitz  <dan@codesourcery.com>

	* sysdeps/generic/bits/byteswap.h (__bswap_constant_16): New macro.
	(__bswap_16): Use it.
	(__bswap_constant_32): New macro.
	(__bswap_32): Use it.

2005-10-10  Ulrich Drepper  <drepper@redhat.com>

	* malloc/arena.c (ptmalloc_unlock_all2): Reset atfork_recursive_cntr.

2005-10-08  Jakub Jelinek  <jakub@redhat.com>

	* nss/getent.c (hosts_keys): Pass INADDRSZ as size rather
	than IN6ADDRSZ to AF_INET gethostbyaddr.

2005-10-07  Roland McGrath  <roland@redhat.com>

	[BZ #1438]
	* include/features.h: Make tests on _FORTIFY_SOURCE and __OPTIMIZE__
	friendly to -Wundef.
	(__USE_FORTIFY_LEVEL): Always define it, to 0 if nothing else.

2005-10-06  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/readonly-area.c: Allow fopen to fail because
	the file does not exist.

2005-10-05  Simon Josefsson  <jas@extundo.com>

	[BZ #1423]
	* crypt/md5.h (MD5_DIGEST_SIZE, MD5_BLOCK_SIZE): New macros.

2005-10-05  Roland McGrath  <roland@redhat.com>

	* crypt/Makefile (distribute): Remove duplicate defn.

	* sysdeps/generic/ldsodefs.h (struct audit_ifaces):
	Use ARCH_PLTENTER_MEMBERS and ARCH_PLTEXIT_MEMBERS macros if defined.